# cpp_utils

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake-format.yaml
include/samwarring/: container_iostream.hpp  container_istream.hpp  container_ostream.hpp  instance_tracker.hpp  quantity.hpp  ring_buffer.hpp  singleton.hpp  storage.hpp
test/: CMakeLists.txt  container_iostream_test.cpp  container_istream_test.cpp  container_ostream_test.cpp  instance_tracker_test.cpp  main.cpp  quantity_test.cpp  ring_buffer_test.cpp  singleton_test.cpp  storage_test.cpp
